2007-11-06  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_get_sync_times),
	(gst_base_sink_do_sync), (gst_base_sink_preroll_object),
	(gst_base_sink_event), (gst_base_sink_get_position_last),
	(gst_base_sink_get_position_paused), (gst_base_sink_get_position),
	(gst_base_sink_change_state):
	Don't try to report a 0 position when we don't know, return -1 and FALSE
	instead. This mostly happens when we are prerolling.
	Make sure we can report the right position before we post the ASYNC_DONE
	message so that a message handler can query position without races.

	* tests/check/generic/sinks.c: (send_eos), (GST_START_TEST),
	(async_done_handoff), (async_done_func), (send_buffer),
	(async_done_eos_func), (gst_sinks_suite):
	Add two tests for the above.

2007-11-06  Wim Taymans  <wim.taymans@gmail.com>

	* MAINTAINERS:
	Update with new email address.

	* docs/design/part-TODO.txt:
	Add some more info about future pad-block and negotiation changes.

	* docs/design/part-buffering.txt:
	Add some ideas about buffering reporting.

2007-11-06  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/gst/gstobject.c:
	Disable silly racy test that always fails on this combination of CPU
	and kernel.

2007-11-03  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Murray Cumming  <murrayc@murrayc.com>

	* gst/gstobject.c:
	  Corrected the registration of the parent-set and parent-unset
	  signals: The parameter is a GstObject, not a GObject (#493134).

2007-11-02  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gst_private.h:
	* gst/gstbuffer.h:
	* gst/gstevent.h:
	* gst/gstformat.h:
	* gst/gstmessage.h:
	* gst/gstplugin.h:
	* gst/gstquery.h:
	* gst/gsttaglist.h:
	* gst/gstvalue.h:
	  Move declaration of private _gst_foo_initialize() functions into
	  our private header file where they should have been all along.

2007-11-02  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/plugins/gstreamer-plugins-sections.txt: